--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ hr {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  font-family: 'Cutive Mono';
+  font-family: 'Andale Mono';
 }
 
 .container .buttons {
