--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" >
-    <head>
-        <meta charset="utf-8">
-        <title>
-            {% if post.title %}{{ post.title }}
-                •
-            {% else %}
-            {% endif %}{{ site.title }}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Cutive+Mono">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
-    </head>
-    <body>
-        {{ content }}
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>
+        {% if post.title %}{{ post.title }}
+        •
+        {% else %}
+        {% endif %}{{ site.title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Cutive+Mono">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+    <script>
+    MathJax = {
+        tex: {
+            inlineMath: [
+                ['$', '$']
+            ],
+            displayMath: [
+                ['$$', '$$'],
+                ['\\[', '\\]']
+            ],
+            processEscapes: true,
+        },
+        chtml: {
+            matchFontHeight: false,
+            displayAlign: "left",
+            displayIndent: "2em"
+        }
+    };
+    </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+</head>
+
+<body>
+    {{ content }}
+</body>
+
 </html>
