--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,3 @@
-{% comment%}
-Here we generate all the tags.
-{% endcomment%}
-
 {% assign rawtags = "" %}
 {% for post in site.posts %}
 {% assign ttags = post.tags | join:'|' | append:'|' %}
@@ -31,6 +27,19 @@ Here we generate all the tags.
 		<!-- <img class="about" src="{{ site.image }}"
                     alt="Clark"/> -->
 		<p class="lead">{{ site.about }}</p>
+		<h1>Index</h1>
+		<ul>
+			<li><a href="{{ site.baseurl }}/">Home</a></li>
+			{% for post in site.pages %}
+			{% if post.isIndex %}
+			{% if post.title %}
+			<li>
+				<a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a>
+			</li>
+			{% endif %}
+			{% endif %}
+			{% endfor %}
+		</ul>
 		<h1>Tags</h1>
 		<ul>
 			{% for tag in tags %}
