--- a/_includes/post_sidebar.html
+++ b/_includes/post_sidebar.html
@@ -3,6 +3,19 @@
         <h1>Description</h1>
         <p class="lead">{{ post.desc }}</p>
         <hr>
+        <h1>Index</h1>
+        <ul>
+            <li><a href="{{ site.baseurl }}/">Home</a></li>
+            {% for post in site.pages %}
+            {% if post.isIndex %}
+            {% if post.title %}
+            <li>
+                <a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a>
+            </li>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+        </ul>
         <h1>Tags</h1>
         <ul>
             {% for tag in page.tags %}
