--- a/_includes/post_sidebar.html
+++ b/_includes/post_sidebar.html
@@ -10,7 +10,7 @@
             {% if post.isIndex %}
             {% if post.title %}
             <li>
-                <a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a>
+                <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
             </li>
             {% endif %}
             {% endif %}
