--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,7 +34,7 @@
 			{% if post.isIndex %}
 			{% if post.title %}
 			<li>
-				<a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a>
+				<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
 			</li>
 			{% endif %}
 			{% endif %}
